sylk-iot/iot-proxy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9001

static_resources:
  listeners:
    - name: sylk_redis_cache_listener
      address:
        socket_address: { address: 0.0.0.0, port_value: 9000 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: ingress_http
              codec_type: AUTO
              stream_idle_timeout: 0s
              common_http_protocol_options:
                max_stream_duration: 0s
              http2_protocol_options:
                # Configure an HTTP/2 keep-alive to detect connection issues and reconnect
                # to the admin server if the connection is no longer responsive.
                connection_keepalive:
                  interval: 30s
                  timeout: 5s
              route_config:
                name: sylk_iot_route
                virtual_hosts:
                - name: sylk_iot_host
                  domains: ["*"]
                  routes:
                    - match: { prefix: "/sylklabs." }
                      route:
                        cluster: sylk_iot_cluster
                        max_grpc_timeout: 30s
                        timeout: 30s
                        max_stream_duration:
                          grpc_timeout_header_max: 0s
                  cors:
                    allow_origin_string_match:
                      - prefix: "*"
                    allow_methods: GET, PUT, DELETE, POST, OPTIONS
                    allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout,x-request-id,sylk-version
                    max_age: "1728000"
                    expose_headers: grpc-status,grpc-message,x-request-id,sylk-version
              http_filters:
                - name: envoy.filters.http.grpc_web
                - name: envoy.filters.http.cors
                - name: envoy.filters.http.router
              access_log:
                - name: envoy.access_loggers.stdout
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
  clusters:
   
    # Core services
    - name: sylk_iot_cluster
      connect_timeout: 0.25s
      type: STRICT_DNS
      http2_protocol_options: {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          common_http_protocol_options:
            max_stream_duration: 0s
          explicit_http_config:
            http2_protocol_options:
              # Configure an HTTP/2 keep-alive to detect connection issues and reconnect
              # to the admin server if the connection is no longer responsive.
              connection_keepalive:
                interval: 30s
                timeout: 5s
      load_assignment:
        cluster_name: sylk_iot_cluster
        endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address: 
                  address: iot-server
                  port_value: 44880
